--- a/Projects_for_Practise/BMI-Calculator/index.html
+++ b/Projects_for_Practise/BMI-Calculator/index.html
@@ -13,7 +13,7 @@
      </nav>  
   <div class="container">
   
-      <h1>BMI Calculator</h1>
+      <h1>BMI Calculator inspired  by Chai aur Code </h1>
       <form >
          <p class="para"><label for="Height">Height in CM:</label><input  type="text" id="height"></p>
          <p class="para"><label for="Weight">Weight in KG:</label><input  type="text" id="weight"></p>
